--- a/soccer-league/src/main/webapp/index.html
+++ b/soccer-league/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html>
 <head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <title>Duke's Soccer League: Home</title>
 </head>
 <body>
@@ -19,7 +20,7 @@ This is the Home page for Duke’s Soccer League.
 </ul>
 <h3>League Administrator</h3>
 <ul>
-<li>Add a new league (TBA)</li>
+<li><a href="add_league.html">Add a new league (TBA)</a></li>
 </ul>
 </body>
 </html>
