added same page error functionality

--- a/soccer-league/src/main/webapp/index.html
+++ b/soccer-league/src/main/webapp/index.html
@@ -20,7 +20,7 @@ This is the Home page for Duke’s Soccer League.
 </ul>
 <h3>League Administrator</h3>
 <ul>
-<li><a href="add_league.html">Add a new league (TBA)</a></li>
+<li><a href="add_league.view">Add a new league (TBA)</a></li>
 </ul>
 </body>
 </html>
